Bugfix - overlay is not showing

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -33,7 +33,6 @@ Primary
 body {
     font-family: 'Raleway', Helvetica, Arial, sans-serif;
     background-image: url('/img/overlay.png');
-    background: $white;
     color: $black;
 }
 
